--- a/download.html
+++ b/download.html
@@ -65,10 +65,10 @@
          <center>
          <img src="Textures/logo.png" id="logoimg" draggable="false">
          <br>
-         <h1>Vectras (Alpha Testing)</h1>
+         <h1>Vectras (1.1b)</h1>
          <br>
          <br>
-         <a href="https://drive.google.com/file/d/16bC0S32k2ejYRjdJ-aZajEZh2VsSJB0n/view?usp=drive_link"><button id="btn911">Download APK</button></a>
+         <a href="https://github.com/epicstudios856/Vectras-windows-emulator/raw/main/releases/apk/1.1b-2023-11-15.apk"><button id="btn911">Download APK</button></a>
          <br>
          <br>
          <a href="how.html"><button id="btn911">How To Download</button></a>
